--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2772,7 +2772,7 @@ input, select, textarea {
 			}
 
 				#header > footer .icons li a {
-					color: #b7eadc;
+					color: #add3eb;
 				}
 
 		#header > nav {
