add video-link class for improved accessibility and structure of video elements

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3314,3 +3314,11 @@ input, select, textarea {
 			}
 
 	}
+
+	.video-link {
+    display: block;
+	}
+
+	.video-responsive {
+		display: block;
+	}
