--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3318,15 +3318,15 @@ input, select, textarea {
 /* Carousel container with 4:3 aspect ratio */
 .carousel-item {
 	display: block;
-	width: 100%;
-	aspect-ratio: 4 / 3;
+	width: 937px;
+	height: 621px;
 	overflow: hidden;
 	position: relative;
 }
 
 .media-frame {
-	width: 100%;
-	height: 100%;
+	width: 937px;
+	height: 621px;
 	overflow: hidden;
 	border-radius: 8px;
 }
