--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3378,7 +3378,7 @@ input, select, textarea {
 
 .description a {
   color: #ffd700;
-  text-decoration: underline;
+  /*text-decoration: underline;*/
 }
 
 /* === Locked GitHub Repo Styling === */
