--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3377,10 +3377,12 @@ input, select, textarea {
 }
 
 .description a {
-  margin: 0 0 0.5em;
+  display: block; /* Makes the link take up the full width */
+  padding: 0.5em 0; /* Adds vertical padding for easier clicking */
   color: #ffd700;
-  /*text-decoration: underline;*/
+  text-decoration: none;
 }
+
 
 /* === Locked GitHub Repo Styling === */
 .locked-link {
