--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3386,7 +3386,7 @@ input, select, textarea {
 /* === Locked GitHub Repo Styling === */
 .locked-link {
   position: relative;
-  cursor: not-allowed;
+  /*cursor: not-allowed;*/
   display: inline-block;
   color: #555;
   font-weight: bold;
