--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3380,6 +3380,13 @@ input, select, textarea {
   color: #ffd700;
 }
 
+.description p {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 
 /* === Locked GitHub Repo Styling === */
 .locked-link {
